k8s/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: kannel-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /status.txt
            pathType: Exact
            backend:
              serviceName: kannel-svc
              servicePort: 13000
